# robo-notes

./: Cargo.toml  justfile
src/: cli.rs  lib.rs  main.rs  note.rs  vault.rs
